"""Analyzer for extracting state diagrams from Python code.

This module provides functionality for analyzing Python code and extracting
state diagrams from it.
"""

import logging
from pathlib import Path
from typing import Any

from utils.uml.core.exceptions import ParserError
from utils.uml.core.filesystem import FileSystem
from utils.uml.diagrams.base import BaseDiagramAnalyzer
from utils.uml.diagrams.state_diagram.models import (
    CompositeStateModel,
    EndStateModel,
    StartStateModel,
    StateDiagram,
    StateModel,
    TransitionModel,
)


class StateAnalyzer(BaseDiagramAnalyzer):
    """Analyzer for extracting state diagrams from Python code."""

    def __init__(self, file_system: FileSystem):
        """Initialize the state analyzer.

        Args:
            file_system: The file system implementation to use
        """
        super().__init__(file_system)
        self.logger = logging.getLogger(__name__)

    def analyze(
        self,
        path: str | Path,
        **kwargs: Any,
    ) -> StateDiagram:
        """Analyze the source code at the given path and generate a state diagram.

        This is a placeholder implementation that will be expanded in the future.
        Currently, it creates a simple example diagram.

        Args:
            path: Path to the source code to analyze
            **kwargs: Additional analyzer-specific arguments

        Returns:
            A state diagram model

        Raises:
            ParserError: If the analysis fails
        """
        try:
            # Create a placeholder diagram
            diagram_name = kwargs.get("name", "State Diagram")
            if isinstance(path, Path):
                if path.is_file():
                    diagram_name = f"State Diagram - {path.stem}"
                else:
                    diagram_name = f"State Diagram - {path.name}"

            diagram = StateDiagram(diagram_name)

            # This is a placeholder implementation
            # In a real implementation, we would analyze the code and extract states

            # Add a simple example diagram
            self._create_example_diagram(diagram)

            return diagram
        except Exception as e:
            raise ParserError(f"Failed to analyze code at {path}: {e}", cause=e)

    def _create_example_diagram(self, diagram: StateDiagram) -> None:
        """Create a simple example diagram.

        Args:
            diagram: The diagram to populate
        """
        # Add start state
        start = StartStateModel("start")
        diagram.add_start_state(start)

        # Add states
        idle = StateModel("idle", "Idle")
        idle.add_entry_action("initialize()")
        idle.add_exit_action("cleanup()")

        processing = StateModel("processing", "Processing")
        processing.add_entry_action("startProcess()")
        processing.add_internal_action("updateProgress()")
        processing.add_exit_action("endProcess()")

        waiting = StateModel("waiting", "Waiting for Input")
        waiting.add_entry_action("displayPrompt()")

        error = StateModel("error", "Error")
        error.add_entry_action("logError()")
        error.add_internal_action("displayError()")

        # Add composite state
        composite = CompositeStateModel("composite", "Composite State")
        substate1 = StateModel("substate1", "Substate 1")
        substate2 = StateModel("substate2", "Substate 2")
        composite.add_substate(substate1)
        composite.add_substate(substate2)
        composite.add_internal_transition(
            TransitionModel("substate1", "substate2", "next", None, "transition()"),
        )

        # Add states to diagram
        diagram.add_state(idle)
        diagram.add_state(processing)
        diagram.add_state(waiting)
        diagram.add_state(error)
        diagram.add_composite_state(composite)

        # Add end state
        end = EndStateModel("end")
        diagram.add_end_state(end)

        # Add transitions
        diagram.add_transition(TransitionModel("start", "idle"))
        diagram.add_transition(
            TransitionModel("idle", "processing", "start", None, "beginProcessing()"),
        )
        diagram.add_transition(
            TransitionModel(
                "processing", "waiting", "needInput", None, "pauseProcessing()"
            ),
        )
        diagram.add_transition(
            TransitionModel(
                "waiting", "processing", "inputReceived", None, "resumeProcessing()"
            ),
        )
        diagram.add_transition(
            TransitionModel(
                "processing", "idle", "complete", None, "finishProcessing()"
            ),
        )
        diagram.add_transition(
            TransitionModel("processing", "error", "error", None, "handleError()"),
        )
        diagram.add_transition(
            TransitionModel("error", "idle", "reset", None, "resetSystem()"),
        )
        diagram.add_transition(
            TransitionModel("idle", "composite", "enterComposite"),
        )
        diagram.add_transition(
            TransitionModel("composite", "idle", "exitComposite"),
        )
        diagram.add_transition(
            TransitionModel("idle", "end", "shutdown"),
        )
